force-app/main/default/objects/Dynamic_Field_Analysis__c/Dynamic_Field_Analysis__c.object-meta.xml
<CustomObject>
    <label>Dynamic Field Analysis</label>
    <nameField>
        <displayFormat>DFA-{0000}</displayFormat>
        <label>Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Field Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>