force-app/main/default/objects/Dynamic_Field_Analysis__c/fields/Field_Analysis_Details__c.field-meta.xml
<CustomField>
    <fullName>Field_Analysis_Details__c</fullName>
    <label>Field Analysis Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>