force-app/main/default/objects/Dynamic_Field_Analysis__c/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <label>Record Type ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>