force-app/main/default/objects/Dynamic_Field_Analysis__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <label>Record Type Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>