force-app/main/default/objects/Dynamic_Field_Analysis__c/fields/Selected_Fields__c.field-meta.xml
<CustomField>
    <fullName>Selected_Fields__c</fullName>
    <label>Selected Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>