force-app/main/default/objects/Dynamic_Field_Analysis__c/fields/Total_Fields_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Fields_Count__c</fullName>
    <label>Total Fields Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>